# fractal-vlm-state-probe

./: .gitignore  README.md  pyproject.toml
configs/: generator_pairing_transfer_v1.json  julia_smoke.json  mandelbrot_smoke.json
configs/conditions/: control_noise_ordered.json  external_geometric_ordered.json  external_natural_cat.json  external_natural_china.json  external_natural_city.json  external_natural_flower.json
configs/source_variants/: julia_zoom_c.json  julia_zoom_d.json  julia_zoom_e_50f.json  julia_zoom_f_50f.json  julia_zoom_g_50f.json  julia_zoom_h_50f.json  mandelbrot_zoom_b.json  mandelbrot_zoom_c.json  mandelbrot_zoom_d_50f.json  mandelbrot_zoom_e_50f.json  mandelbrot_zoom_f_50f.json  mandelbrot_zoom_g_50f.json
docs/: comparison_axes.md  control_stimuli.md  experiment_design.md  paper_evidence_matrix.md  provider_tiers.md  roadmap.md
docs/research_notes/: 0001_mandelbrot_smoke_observation.md  0002_null_vs_stream_smoke.md  0003_cache_summary_condition_classifier.md  0004_unseeded_probe_temperature_smoke.md  0005_paired_stochastic_probe_design.md  0006_paired_stochastic_probe_smoke.md  0007_paired_stochastic_probe_50_seed.md  0008_pattern_probe_smoke.md  0009_stimulus_seed_8_variant_smoke.md  0010_phase_scramble_image_stats.md  0011_quantile_matched_phase_scramble.md  0012_frequency_ablation_smoke.md  0013_frequency_cutoff_sweep.md  0014_image_cache_correlation.md  0015_source_variant_followups.md  0016_five_step_instrumentation_kickoff.md  0017_cross_palette_control_smoke.md  0018_cross_palette_replication_path.md  0019_cross_palette_replication_readout.md  0020_true_50_frame_cross_palette_replication.md  0021_layer23_values_swap_intervention_scaffold.md  0022_two_pair_values_swap_intervention.md  0023_qwen_cross_model_factorial_pilot.md  0024_dense_mid_layer_values_swap_profile.md  0025_controlled_mid_layer_values_swap_confirmation.md  0026_qwen_cumulative_replay_trajectory.md  0027_cache_prefix_audit_and_direct_full_vocab.md  0028_source_pair_replication_and_prompt_robustness.md  0029_cross_model_prompt_and_internvl_expansion.md  0030_full_vector_cache_factorials.md  0031_balanced_contrasts_five_model_expansion.md  0032_five_model_prompt_robustness_and_source_pair_decoupling.md  0033_five_model_two_pair_prompt_matrix.md  0034_four_pair_prompt_replication_and_phi35_expansion.md  0035_six_model_four_pair_completion_and_phi_full_vector.md  (+6 more)
examples/: README.md
scripts/: analyze_cache_classifier.py  analyze_cache_direction_class_permutation.py  analyze_cache_direction_hierarchy.py  analyze_cache_intervention_profiles.py  analyze_cache_interventions.py  analyze_cache_prefix_audits.py  analyze_cache_tensor_factorial.py  analyze_cache_tensor_replication.py  analyze_cross_model_replication.py  analyze_factorial_cache_contrast.py  analyze_factorial_cache_trajectory.py  analyze_factorial_image_contrast.py  analyze_full_vocab_readout_contrast.py  analyze_image_cache_correlations.py  analyze_image_stats.py  analyze_probe_readout_contrast.py  analyze_processor_image_stats.py  analyze_prompt_robustness.py  analyze_prompt_robustness_aggregate.py  analyze_prompt_robustness_multi_pair_matrix.py  analyze_prompt_robustness_pair_matrix.py  build_external_frame_manifest.py  compare_runs.py  generate_blank_frames.py  generate_control_frames.py  generate_fractal_frames.py  list_provider_capabilities.py  prepare_cross_palette_factorial_batch.py  prepare_generator_pairing_panel.py  run_hf_stream_probe.py  run_julia_smoke.py  run_mlx_cache_values_swap_probe.py  run_mlx_cache_values_swap_sweep.py  run_mlx_cumulative_replay_probe.py  run_mlx_manifest_probe_batch.py  run_mlx_null_fractal_batch.py  run_mlx_paired_stochastic_probe_batch.py  run_mlx_pattern_probe_batch.py  run_mlx_stream_probe.py  summarize_run.py
tests/: test_cache_classifier.py  test_cache_direction_hierarchy.py  test_cache_direction_permutation.py  test_cache_intervention_analysis.py  test_cache_intervention_profile.py  test_cache_interventions.py  test_cache_prefix_audit.py  test_cache_tensor_artifact.py  test_cache_tensor_factorial.py  test_cache_tensor_replication.py  test_compare_runs.py  test_conditions.py  test_control_stimulus.py  test_cross_model_replication.py  test_cross_palette_batch.py  test_examples.py  test_external_frames.py  test_factorial_cache_trajectory.py  test_factorial_contrast.py  test_factorial_image_contrast.py  test_fractals.py  test_frame_artifacts.py  test_full_vocab_readout.py  test_generator_pairing_panel.py  test_hf_stream.py  test_image_cache_correlation.py  test_image_stats.py  test_manifest_batch.py  test_mlx_cumulative_replay.py  test_mlx_processor_compat.py  test_mlx_stream.py  test_paired_stochastic.py  test_pattern_batch.py  test_probe_readout.py  test_processor_image_stats.py  test_prompt_robustness.py  test_prompt_robustness_aggregate.py  test_prompt_robustness_multi_pair_matrix.py  test_prompt_robustness_pair_matrix.py  test_prompts.py  (+4 more)
(+151 files in other folders)
