[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-vlm-state-probe"
version = "0.1.0"
description = "Deterministic fractal visual streams for probing context-conditioned VLM behavior."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10",
]

[project.optional-dependencies]
hf = [
  "num2words>=0.5",
  "torch>=2",
  "transformers>=4.50",
]
mlx = [
  "mlx",
  "mlx-vlm",
]
dev = [
  "pytest>=8",
]

[project.scripts]
generate-fractal-frames = "fractal_vlm_state_probe.cli.generate_fractal_frames:main"
generate-blank-frames = "fractal_vlm_state_probe.cli.generate_blank_frames:main"
generate-control-frames = "fractal_vlm_state_probe.cli.generate_control_frames:main"
run-mlx-stream-probe = "fractal_vlm_state_probe.cli.run_mlx_stream_probe:main"
run-mlx-cumulative-replay-probe = "fractal_vlm_state_probe.cli.run_mlx_cumulative_replay_probe:main"
run-mlx-cache-values-swap-probe = "fractal_vlm_state_probe.cli.run_mlx_cache_values_swap_probe:main"
run-mlx-cache-values-swap-sweep = "fractal_vlm_state_probe.cli.run_mlx_cache_values_swap_sweep:main"
run-hf-stream-probe = "fractal_vlm_state_probe.cli.run_hf_stream_probe:main"
run-mlx-null-fractal-batch = "fractal_vlm_state_probe.cli.run_mlx_null_fractal_batch:main"
run-mlx-paired-stochastic-probe-batch = "fractal_vlm_state_probe.cli.run_mlx_paired_stochastic_probe_batch:main"
run-mlx-pattern-probe-batch = "fractal_vlm_state_probe.cli.run_mlx_pattern_probe_batch:main"
run-mlx-manifest-probe-batch = "fractal_vlm_state_probe.cli.run_mlx_manifest_probe_batch:main"
prepare-cross-palette-factorial-batch = "fractal_vlm_state_probe.cli.prepare_cross_palette_factorial_batch:main"
build-external-frame-manifest = "fractal_vlm_state_probe.cli.build_external_frame_manifest:main"
list-provider-capabilities = "fractal_vlm_state_probe.cli.list_provider_capabilities:main"
summarize-run = "fractal_vlm_state_probe.cli.summarize_run:main"
run-julia-smoke = "fractal_vlm_state_probe.cli.run_julia_smoke:main"
compare-runs = "fractal_vlm_state_probe.cli.compare_runs:main"
analyze-cache-classifier = "fractal_vlm_state_probe.cli.analyze_cache_classifier:main"
analyze-image-cache-correlations = "fractal_vlm_state_probe.cli.analyze_image_cache_correlations:main"
analyze-factorial-cache-contrast = "fractal_vlm_state_probe.cli.analyze_factorial_cache_contrast:main"
analyze-factorial-cache-trajectory = "fractal_vlm_state_probe.cli.analyze_factorial_cache_trajectory:main"
analyze-factorial-image-contrast = "fractal_vlm_state_probe.cli.analyze_factorial_image_contrast:main"
analyze-probe-readout-contrast = "fractal_vlm_state_probe.cli.analyze_probe_readout_contrast:main"
analyze-cache-interventions = "fractal_vlm_state_probe.cli.analyze_cache_interventions:main"
analyze-cache-intervention-profiles = "fractal_vlm_state_probe.cli.analyze_cache_intervention_profiles:main"
analyze-image-stats = "fractal_vlm_state_probe.cli.analyze_image_stats:main"
analyze-processor-image-stats = "fractal_vlm_state_probe.cli.analyze_processor_image_stats:main"

[tool.setuptools.packages.find]
where = ["src"]
